part1/helloworld-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  creationTimestamp: "2020-01-28T07:51:15Z"
  generation: 3
  labels:
    app: helloworld
    kubernetes.io/ingress.class: nginx.ingress.kubernetes.io
  name: helloworld
  namespace: default
  resourceVersion: "616457"
  selfLink: /apis/extensions/v1beta1/namespaces/default/ingresses/helloworld
  uid: 6c31b05b-bcf7-4907-b0c9-f86529e255b8
spec:
  rules:
  - host: helloworld.7sae2.k8s.gorilla.eu-central-1.aws.gigantic.io
    http:
      paths:
      - backend:
          serviceName: helloworld
          servicePort: 8080
        path: /
status:
  loadBalancer:
    ingress:
    - {}
