part1/helloworld-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: helloworld
    prometheus: k8s
  name: helloworld
  namespace: default
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: web
  selector:
    app: helloworld
  sessionAffinity: None
  type: ClusterIP
